@@ -54,6 +54,7 @@
 - updated: `schema.define('name', null)` removes a schema field
 - updated: Chunker supports `compression`, default `true`
 - updated: Chunker supports `autoremove` processed files in `each()` or `read()` method, default `true`
+- updated: `String.parseConfig(def, [onError])` can handle errors better
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
